
 o new implementation Imperative.Digraph.ConcreteBidirectionalLabeled
   (contribution of Jaap Boender)
 o Dgraph displays graphs faster
 o several bugs fixed in DGraph
 o several API changes in DGraph
   (may break compatibility with existing development)

version 1.3, Octobre 2nd, 2009
------------------------------
 o Oper.mirror: undirected graphs are not copied anymore
 o Oper.mirror: fixed bug (isolated vertices were lost)
 o Graphviz: new signature GraphWithDotAttrs
 o Improvements of Dgraph
 o Configure: better test for detecting lablgtk
 o OcamlGraph is now installed by default in `ocamlc -where`/ocamlgraph
 o Viewgraph is now packed in a single module Viewgraph (break compatibility
   with previous version)
 o Dgraph is now packed in a single module Dgraph (break compatibility with
   previous version)
 o Makefile: fixed bug when the installation directory of binaries does not
             exist 
 o Makefile: fixed bug of ocamldep under Windows

version 1.2, August 31, 2009
----------------------------
 o experimental: new GTK-based graph viewer called Dgraph 
   (viewGraph is now deprecated)
 o added Delaunay.iter_triangles (not of use in Ocamlgraph, actually)

version 1.1, June 23rd, 2009
----------------------------
 o added constraint "type E.label = unit" to unlabeled graph data structure
 o viewGraph: new module viewGraph_utils; fixed compilation (gtkInit
   was missing; patch by Mehdi Dogguy)
 o configure: fixed bug under Cygwin (patch by Julien Bernet)
 o configure: look for lablgnomecanvas.cmxa when compiling in native code
 o Makefile: fixed make install-findlib when lablgtk and/or
   lablgnomecanvas not installed (patch by Peter Hawkins)

version 1.0, October 14th, 2008
-------------------------------
 o license: LGPL updated to version 2.1
 o ocamlgraph now requires ocaml 3.10 or higher
 o experimental: GTK-based graph viewer based on dot 
   (contribution of Anne Pacalet)
 o Makefile: 
     - fixed bug when lablgnomecanvas is not installed